--- a/Milestone_1_test3/Milestone_1_test3.entitlements
+++ b/Milestone_1_test3/Milestone_1_test3.entitlements
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.developer.pass-type-identifiers</key>
+	<key>com.apple.developer.in-app-payments</key>
 	<array>
-		<string>$(TeamIdentifierPrefix)*</string>
+		<string>merchant.2400</string>
 	</array>
 </dict>
 </plist>
